implement asynchronous auth
